tests/snapshots/snapshot_fixtures__fixtures__nonnull_static_array_param.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/nonnull_static_array_param.c" (c, x86_64-unknown-linux-gnu)
global __const.main.values : s32i[4] = [1, 2, 3, 4] [cir_private, default, dso_local, constant]
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn sum4(%arg0: s32i*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*):
        %12 = alloca s32i*, "arr", align 8
        %13 = alloca s32i, "__retval", align 4
        %14 = alloca s32i, "s", align 4
        store %arg0, %12
        %15 = const 0 : s32i
        store %15, %14, align 4
        scope {
            %18 = alloca s32i, "i", align 4
            %19 = const 0 : s32i
            store %19, %18, align 4
            for cond: {
                %29 = load %18 : s32i, align 4
                %30 = const 4 : s32i
                %31 = cmp lt %29, %30 : bool
                condition %31
            } step: {
                %20 = load %18 : s32i, align 4
                %21 = inc %20 : s32i [nsw]
                store %21, %18, align 4
                yield
            } do {
                scope {
                    %22 = load %18 : s32i, align 4
                    %23 = cast(integral) %22 : s64i
                    %24 = load %12 : s32i*, align 8
                    %25 = ptr_stride %24, %23 : s32i*
                    %26 = load %25 : s32i, align 4
                    %27 = load %14 : s32i, align 4
                    %28 = add %27, %26 : s32i [nsw]
                    store %28, %14, align 4
                    yield
                }
                yield
            }
            yield
        }
        %16 = load %14 : s32i, align 4
        store %16, %13
        %17 = load %13 : s32i
        return %17
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[4], "values", align 16
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.values : s32i[4]*
    copy %1, %3
    %4 = get_global @printf : ((s8i*, ...) -> s32i)*
    %5 = get_global @.str : s8i[4]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = cast(array_to_ptrdecay) %1 : s32i*
    %8 = call @sum4(%7) : s32i [all]
    %9 = call @printf(%6, %8) : s32i [all]
    %10 = const 0 : s32i
    store %10, %0
    %11 = load %0 : s32i
    return %11
}
