tests/snapshots/snapshot_fixtures__fixtures__noreturn_c11_spelling.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/noreturn_c11_spelling.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[15] = "dying with %d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[6] = "main\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn exit(%arg0: s32i) -> void [external, c, nothrow];
fn die(%arg0: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %11 = alloca s32i, "code", align 4
        store %arg0, %11
        %12 = get_global @printf : ((s8i*, ...) -> s32i)*
        %13 = get_global @.str : s8i[15]*
        %14 = cast(array_to_ptrdecay) %13 : s8i*
        %15 = load %11 : s32i, align 4
        %16 = call @printf(%14, %15) : s32i [all]
        %17 = get_global @exit : ((s32i) -> void)*
        %18 = load %11 : s32i, align 4
        call @exit(%18) [all]
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %8 = const 0 : s32i
        %9 = cast(int_to_bool) %8 : bool
        if %9 {
            %10 = const 1 : s32i
            call @die(%10) [all]
            yield
        }
        yield
    }
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str.1 : s8i[6]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = call @printf(%4) : s32i [all]
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
